...
            "state" : "translated",
            "value" : "准确度"
          }
        }
      }
    },
    "Add" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "添加"
          }
...
            "state" : "translated",
            "value" : "在设置中添加 扩展 即可开始。"
          }
        }
      }
    },
    "Add File" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "添加文件"
          }
...
            "state" : "translated",
            "value" : "选择文件"
          }
        }
      }
    },
    "Choose from Photos" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "从照片中选择"
          }
...
            "state" : "translated",
            "value" : "不分享"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "完成"
          }
...
            "state" : "translated",
            "value" : "长度"
          }
        }
      }
    },
    "Linda" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Linda"
          }
...
            "state" : "translated",
            "value" : "个性"
          }
        }
      }
    },
    "Photos" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "照片"
          }
...
            "state" : "translated",
            "value" : "正在更新"
          }
        }
      }
    },
    "Upload" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "上传"
          }
...
            "state" : "translated",
            "value" : "当任意条件匹配时，该 工具 将自动确认，无需询问。"
          }
        }
      }
    },
    "Yes" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "是"
          }
...
